--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,20 @@
 services:
-    - type: web
-      name: whisper-service
+    - name: node-server
+      env: node
+      buildCommand: 'npm install'
+      startCommand: 'npm start'
+      plan: free
+      branches:
+          production:
+              rootDir: .
+
+    - name: python-whisper
       env: python
       buildCommand: |
-          apt-get update && apt-get install -y ffmpeg
           pip install -r requirements.txt
-      startCommand: python3 whisper_worker.py
+      startCommand: |
+          python3 whisper_worker.py
       plan: free
+      branches:
+          production:
+              rootDir: .
